@@ -52,6 +52,8 @@ namespace std _GLIBCXX_VISIBILITY(default)
 {
 namespace experimental
 {
+inline namespace fundamentals_v1
+{
 _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
   /**
@@ -797,6 +799,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
   // @} group optional
 _GLIBCXX_END_NAMESPACE_VERSION
+} // namespace fundamentals_v1
 }
 
   // [X.Y.12]
